--- a/stat-service/stat-server/pom.xml
+++ b/stat-service/stat-server/pom.xml
@@ -117,6 +117,14 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <mainClass>ru.practicum.StatServiceApp</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
