--- a/main-service/scr/main/resources/ application.properties
+++ b/main-service/scr/main/resources/ application.properties
@@ -1,2 +1,18 @@
 server.port=8080
 stat-server.url=http://localhost:9090
+service.name=ewm-main-service
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+spring.jpa.show_sql=true
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=main
+spring.datasource.password=main
