--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 				<classifier>jakarta</classifier>
 				<version>${querydsl-jpa.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.14.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
