--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -73,6 +73,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ru.practicum.MainServiceApp</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
