--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.2.1</version>  <!-- Use the correct version here! -->
         </dependency>
 
         <dependency>
